syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.leonardo.monalisa.common.message.protobuf";

message PersonV2 {
//    string realName = 1;
    string nickName = 2;
    string firstName = 3;
    string lastName = 4;
}